--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "1.0.0",
   "author": "Antoine Dubé",
   "license": "GPL-3.0",
-  "scripts": {
-    "dev": "lite-server"
-  },
   "dependencies": {
-    "lite-server": "latest"
+    "express": "latest"
   }
 }
