Added Morgan for request logging

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "personal-webpage",
+  "description": "Personal page with links to relevant information",
   "version": "1.0.0",
+  "repository" : "https://github.com/antoinedube/portfolio",
   "author": "Antoine Dubé",
   "license": "GPL-3.0",
   "dependencies": {
-    "express": "latest"
+    "express": "latest",
+    "morgan": "latest"
   }
 }
