--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Antoine Dubé",
   "license": "GPL-3.0",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "latest",
