Dev setup with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: .
       dockerfile: docker/node.dockerfile
     command: node server.js
+    volumes:
+      - ./src:/app
     ports:
       - "5000:5000"
 
