--- a/src/package.json
+++ b/src/package.json
@@ -9,15 +9,13 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "d3": "^4.9.1",
-    "express": "latest",
-    "file-stream-rotator": "latest",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
-    "morgan": "latest"
+    "bulma": "^0.8.0",
+    "express": "^4.17.1",
+    "file-stream-rotator": "^0.5.5",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^3.19.0",
-    "nodemon": "^1.11.0"
+    "eslint": "^6.6.0",
+    "nodemon": "^1.19.4"
   }
 }
